:sparkles: Call heart and user withings api